--- a/angular.json
+++ b/angular.json
@@ -25,8 +25,12 @@
               "src/assets"
             ],
             "styles": [
-              "@angular/material/prebuilt-themes/pink-bluegrey.css",
-              "src/styles.css"
+                
+              "src/styles.css",
+                         "node_modules/@angular/material/prebuilt-themes/pink-bluegrey.css",
+           
+              
+  "./node_modules/leaflet/dist/leaflet.css"
             ],
             "scripts": []
           },
@@ -88,8 +92,10 @@
               "src/assets"
             ],
             "styles": [
-              "@angular/material/prebuilt-themes/pink-bluegrey.css",
-              "src/styles.css"
+              
+              "src/styles.css",
+                         "node_modules/@angular/material/prebuilt-themes/pink-bluegrey.css"
+             
             ],
             "scripts": []
           }
